src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__a.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3851
expression: actual
snapshot_kind: text
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": 1.0,
    "raw": "1",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "value": 2.0,
    "raw": "2",
    "start": 4,
    "end": 5
  },
  "start": 0,
  "end": 5
}
