src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__g.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3857
expression: actual
snapshot_kind: text
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": 1.0,
    "raw": "1",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "/",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "operator": "+",
      "left": {
        "type": "Literal",
        "type": "Literal",
        "value": 2.0,
        "raw": "2",
        "start": 6,
        "end": 7
      },
      "right": {
        "type": "Literal",
        "type": "Literal",
        "value": 3.0,
        "raw": "3",
        "start": 10,
        "end": 11
      },
      "start": 6,
      "end": 11
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": 4.0,
      "raw": "4",
      "start": 16,
      "end": 17
    },
    "start": 6,
    "end": 17
  },
  "start": 0,
  "end": 17
}
