src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__h.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3858
expression: actual
snapshot_kind: text
---
{
  "type": "BinaryExpression",
  "operator": "*",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": 1.0,
    "raw": "1",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "+",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "operator": "/",
      "left": {
        "type": "BinaryExpression",
        "type": "BinaryExpression",
        "operator": "+",
        "left": {
          "type": "Literal",
          "type": "Literal",
          "value": 2.0,
          "raw": "2",
          "start": 7,
          "end": 8
        },
        "right": {
          "type": "Literal",
          "type": "Literal",
          "value": 3.0,
          "raw": "3",
          "start": 11,
          "end": 12
        },
        "start": 7,
        "end": 12
      },
      "right": {
        "type": "Literal",
        "type": "Literal",
        "value": 4.0,
        "raw": "4",
        "start": 17,
        "end": 18
      },
      "start": 7,
      "end": 18
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": 5.0,
      "raw": "5",
      "start": 21,
      "end": 22
    },
    "start": 7,
    "end": 22
  },
  "start": 0,
  "end": 22
}
