src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__j.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3860
expression: actual
snapshot_kind: text
---
{
  "type": "BinaryExpression",
  "operator": "/",
  "left": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "operator": "*",
      "left": {
        "type": "BinaryExpression",
        "type": "BinaryExpression",
        "operator": "*",
        "left": {
          "type": "Identifier",
          "type": "Identifier",
          "name": "distance",
          "start": 0,
          "end": 8
        },
        "right": {
          "type": "Identifier",
          "type": "Identifier",
          "name": "p",
          "start": 11,
          "end": 12
        },
        "start": 0,
        "end": 12
      },
      "right": {
        "type": "Identifier",
        "type": "Identifier",
        "name": "FOS",
        "start": 15,
        "end": 18
      },
      "start": 0,
      "end": 18
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": 6.0,
      "raw": "6",
      "start": 21,
      "end": 22
    },
    "start": 0,
    "end": 22
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "Identifier",
      "type": "Identifier",
      "name": "sigmaAllow",
      "start": 26,
      "end": 36
    },
    "right": {
      "type": "Identifier",
      "type": "Identifier",
      "name": "width",
      "start": 39,
      "end": 44
    },
    "start": 26,
    "end": 44
  },
  "start": 0,
  "end": 44
}
