src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__k.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3861
expression: actual
snapshot_kind: text
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": 2.0,
    "raw": "2",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "value": 3.0,
    "raw": "3",
    "start": 7,
    "end": 8
  },
  "start": 0,
  "end": 8
}
